# ancient-scripts-datasets

./: .gitattributes  .gitignore  README.md
cognate_pipeline/: README.md  alembic.ini  config.example.yaml  pyproject.toml
cognate_pipeline/src/cognate_pipeline/: __init__.py
cognate_pipeline/src/cognate_pipeline/cli/: detect_cmd.py  export_cldf_cmd.py  export_jsonld_cmd.py  ingest_cmd.py  load_cmd.py  main.py  normalise_cmd.py
cognate_pipeline/src/cognate_pipeline/cognate/: baseline_levenshtein.py  candidate_gen.py  clustering.py  family_map.json  lexstat_detector.py  models.py
cognate_pipeline/src/cognate_pipeline/config/: loader.py  schema.py
cognate_pipeline/src/cognate_pipeline/db/: connection.py  loader.py  schema.py
cognate_pipeline/src/cognate_pipeline/export/: cldf_exporter.py  jsonld_exporter.py
cognate_pipeline/src/cognate_pipeline/ingest/: base.py  cldf_ingester.py  csv_ingester.py  json_ingester.py  language_map.json  models.py  (+2 more)
cognate_pipeline/tests/: conftest.py
cognate_pipeline/tests/e2e/: test_expanded_validation.py  test_full_pipeline.py  test_training_data.py  test_validation_branches.py  test_validation_sets.py
cognate_pipeline/tests/fixtures/: config_test.yaml  sample_wiktionary.jsonl
cognate_pipeline/tests/unit/: test_accuracy_and_readability.py  test_baseline_levenshtein.py  test_candidate_gen.py  test_cldf_ingester.py  test_clustering.py  test_config_schema.py  test_csv_ingester.py  test_ipa_normaliser.py  test_language_resolver.py  test_provenance.py  test_sound_class.py  test_unicode_cleanup.py  test_wiktionary_ingester.py
(+1259 files in other folders)
